@@ -7,7 +7,7 @@
         body {padding:100px;}
         #container {position:relative; padding-top:200px;}
         #description {text-align:right; font-size:36px; font-weight:normal; position:absolute; top:0; right:0;}
-        #box {background:#f00; width:200px; height:166px;}
+        #box {background:#f00; width:200px; height:166px; color:#fff;}
     </style>
     
     <script type="text/javascript" src="lib/firmin-min.js"></script>
@@ -24,13 +24,14 @@
             title    = document.getElementById('description'),
             interval = 3000,
             timeout  = 0,
+            t1, t2,
         
         test = function(description, block, time) {
             setTimeout(function() {
                 title.innerHTML = description;
                 block();
             }, timeout);
-            timeout += interval;
+            timeout += time ? time : interval;
         };
         
         test("Test chained animation", function() {
@@ -40,6 +41,22 @@
             .translateX(400, 0.5)
             .translateX(-400)
             .skew({x: 45, y: 30}, 1.0);
+        });
+        
+        test("Test callbacks", function() {
+            Firmin.animate(box, {
+                rotate: "45deg",
+                origin: ["100%", "100%"]
+            }, 1.0, function(el) {
+                t1 = (new Date()).getTime();
+                console.log(t1);
+                el.innerHTML = "Testing callback";
+            })
+            .scaleX(1.4, 1.0, function(el) {
+                t2 = (new Date()).getTime();
+                console.log(t2);
+                el.innerHTML = (t2 - t1) + "ms";
+            });
         });
     })();
     </script>
