@@ -1,5 +1,6 @@
 Version 0.1.1
 
+* Add callbacks to animation methods.
 * Use vectors instead of point objects to represent points and transformations
   internally, but continue to allow point objects to be used at the API level.
 * Better inline documentation for core objects and functions.
